--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
 <div>
 
 
-    <h1>Build the Résumé for Your Dream Job!</h1>
+    <h1>Build the Résumé for Your Dream Job Today!</h1>
 
     <br />
 
