• Improvements to ResumeVM • Consider 3xn rows of Skill Points for Skill Categories

--- a/Views/Applicants/ResumeVM.cshtml
+++ b/Views/Applicants/ResumeVM.cshtml
@@ -245,6 +245,12 @@
                                             <li>@skill.SkillPoint</li>
                                         </ul>
                                     </td></tr>}
+
+                                    //Store SkillPoints in a 3xN Array
+                                    //Print them out in the row using a for-loop
+
+                                    //Test first on Repl.it using a multi-dimensional array to
+                                    //store test values
                                 }
 
 
