--- a/Views/Skills/AddSkillsPageView.cshtml
+++ b/Views/Skills/AddSkillsPageView.cshtml
@@ -4,31 +4,19 @@
   Understanding State and Statelessness:
   https://www.c-sharpcorner.com/UploadFile/de41d6/view-state-vs-session-state-vs-application-state/
 
-  In order to use State Preservation, Blazor can be used
-  https://docs.microsoft.com/en-us/aspnet/core/blazor/components/prerendering-and-integration?view=aspnetcore-3.1&pivots=server
-
-
-
-
-
-
-
-
 -->
-<!-- JQUERY SCRIPT -->
+<!-- JQUERY SCRIPTS FOR PERFORMING SPECIFIC FUNCTIONS -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="/scripts/jquery-3.1.1.min.js"></script>
-
-
-
-
-
+<script src="https://code.jquery.com/jquery-2.2.3.min.js"
+        integrity="sha256-a23g1Nt4dtEYOj7bR+vTu7+T8VP13humZFBJNIYoEJo="
+        crossorigin="anonymous">
+</script>
 
 
 @model RésuméBuilder.ViewModels.SkillsViewModel
 
 
-@using System.Web.UI
 
 
 
@@ -38,579 +26,60 @@
     //This value correlates to the ApplicantID between the Applicant and Personal Models
     var id = ViewBag.TargetID;
 
-
-    //Target counter for extra rows (dynamic rows)
-    var xtra = 0;
-
-
-    int k = 3;
-
-
-
 }
 
 
+<body>
+
+    <h2>Add Your Skills</h2>
+
+    <h3>Add Skill Details for Registration ID @id</h3>
+
+    <!--
+       
+        FUTURE WORK ===
+
+
+
+        Add List to Controller via JS/JQUERY
+        Non Sequential Indices
+        
+        
+        OPTION A: WILL BE USED FOR SKILLS [WORKING]
+
+        PART 01: [ADD SKILL] BUTTON
+        - Add an [ADD SKILL] button. Each Click loads an instance of _SkillRowCreate PartialView
+
+        PART 02: ADD SKILL Using _SkillRowCreate PartialView
+        - Submit Button Sends Form Data to Controller Action
+        - Each click triggers: load.html("Skill Added to Database!")
+        - Add Option to DELETE Button
+         - Format: [SUBMIT][DELETE]
+
+        Ajax.BeginForm
+        https://www.quizcure.com/jquery/jquery-refresh-div-ajax-click-interval
+        https://www.w3schools.com/jquery/jquery_dom_add.asp
 
 
 
 
 
-<h2>AddSkillsPageView</h2>
+    
+        OPTION B:
 
-<h3>Add Skill Details for Registration ID @id</h3>
+        PART 01: Use JS/JQUERY to send a JS/JQUERY Form with a List of items to a Controller Action
+        PART 02: Let Controller Action Process List with a foreach loop and store items in DB
 
-<p>Use the Form Below: </p>
+        Solution: https://stackoverflow.com/questions/8193030/how-get-the-values-of-multi-entries-when-added-in-fly-by-jquery-in-view-of-asp
 
-<!--
-
-    The aim is to add a list of Skill Points in one submission, i.e.,
-    ADD A BATCH OF THE SAME ITEMS TO THE DATABASE VIA FORM SUBMISSION AND EF
-
-    Options:
-    1) Pre-configured list of items to add (e.g., 7 items per submission)
-    2) Dynamic add button, to add more Skill Points as needed (e.g., 1 item initially but add button available)
-
-
-
-
-    A list will be needed: IEnumerable<RésuméBuilder.Models.Skill> needs to be used?
-
-    Result:
-    - A form with a list of Skill Points, with the same Skill Category,
-    and with dynamic add button
-    - Submit will add all entries to the Skills Table
-
-
-    Controller Action will need to accept a batch of Skill Entries
-
-    public ActionResult AddSkillsFormAction(IEnumerable<Skills> skills)
-
-
--->
-
-
-
-@using (Html.BeginForm("AddSkillsFormAction", "Skills", FormMethod.Post))
-{
-
-    <!-- APPLICANT ID: AUTOMATICALLY SET TO SPECIFIC VALUE -->
-    <!-- This input field will be passed with the rest of the form data
-         it ensures consistency of ApplicantID between Applicant and Personal.
-         Hidden in a <div> to prevent accidental changes or tampering
     -->
-    <div hidden>
-        <input name="applicantID" type="number" value="@id" />
-    </div>
+    @Html.Partial("_SkillRowCreate")
 
+    
+    
 
 
 
 
 
-
-    //MODEL BINDING COLLECTIONS OF COMPLEX DATATYPES:
-    //https://www.learnrazorpages.com/razor-pages/model-binding#binding-simple-collections
-    //http://haacked.com/archive/2008/10/23/model-binding-to-a-list.aspx/
-    //http://www.hanselman.com/blog/aspnet-wire-format-for-model-binding-to-arrays-lists-collections-dictionaries
-    //https://stackoverflow.com/questions/40681707/mvc-model-binding-with-dynamic-collection
-    //https://docs.microsoft.com/en-us/archive/msdn-magazine/2012/february/asp-net-mvc-the-features-and-foibles-of-asp-net-mvc-model-binding
-
-    //SKILL RECORD 1 TO BE ADDED IN BATCH, STARTS AT INDEX 0: [0]
-    <div class="form-group">
-        @Html.LabelFor(s => s.SkillBatch[0].SkillCategory)
-        @Html.TextBoxFor(s => s.SkillBatch[0].SkillCategory, new { @class = "form-control" })
-
-        @Html.LabelFor(s => s.SkillBatch[0].SkillPoint)
-        @Html.TextBoxFor(s => s.SkillBatch[0].SkillPoint, new { @class = "form-control" })
-
-    </div>
-    <br />
-
-    //ADD MORE COLUMNS
-
-    /*
-
-        What I want is to be able to add more input fields dynamically, based on user needs.
-        When they Click the [ADD SKILL] button, a new field is generated with required input
-        I also need a counter to keep track of SkillBatch[i].
-        It needs to increment after each input field is dynamically added
-
-    */
-
-
-    @Html.Partial("_AddSkillRow")
-
-
-
-
-    <br />
-    <br />
-    <br />
-
-
-
-
-    //SOLUTION: Razor Syntax to call function once event triggered (onclick)
-    //razor syntax call function onclick
-    //session variables
-    //increment session variable
-    //https://stackoverflow.com/questions/61846815/how-to-add-a-event-to-a-button-using-razor
-    //https://www.c-sharpcorner.com/article/event-handling-in-blazor/
-    //GOOD:
-    //https://stackoverflow.com/questions/61846815/how-to-add-a-event-to-a-button-using-razor
-
-
-    <br />
-
-    //I need an MVC Razor Session Variable that increments onclick and preserves state:
-    //https://stackoverflow.com/questions/14138872/how-to-use-sessions-in-an-asp-net-mvc-4-application
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- ADD DYNAMIC ROWS VIA THE SCRIPT BELOW: -->
-
-
-
-    <script type="text/javascript">
-
-
-            //Use this value and append a unique id to each row created
-            var rowNum = @xtra;
-            //window.alert(`j is now at: ${rowNum}`);
-
-            var rowID = ".appendme" + rowNum;
-            //Show row value to class name for div via String Interpolation
-            //window.alert(`Row ID = ${rowID}`);
-
-            //FORM DATA FOR EACH ROW STARTS HERE ==
-
-
-
-
-
-
-
-
-            //FORM DATA FOR EACH ROW ENDS HERE ===
-
-
-
-
-
-
-
-
-
-            //var strTestOpen = `<button class="removeme" id="${rowID}" type="button" onclick="RemoveRow(this)">
-                //REMOVE SKILL!</button>`;
-
-
-
-
-
-
-    </script>
-
-
-
-    //HIDDEN INPUT FIELD USED TO SET SESSION COUNTER
-
-    <div>
-        <input id="SessionCounter" type="number" runat="server" />
-    </div>
-
-
-
-
-
-
-    <button class="appendbtn" type="button">[ROW+]</button>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <script type="text/javascript">
-            //ADD A SINGLE SKILL ROW
-        $(".appendbtn").click(function () {
-
-
-            //How can we assign server-side C# razor variable with a client-side JS value?
-            //https://stackoverflow.com/questions/22495205/access-javascript-variable-inside-razor
-
-
-
-
-            //MAINTAINING A GLOBAL COUNTER & SESSION STATE
-            //https://imar.spaanjaars.com/227/howto-create-a-hit-counter-using-a-text-file-in-aspnet-1x
-            //https://stackoverflow.com/questions/59126869/can-the-state-of-the-counter-in-the-example-blazor-project-be-preserved-between
-            //https://social.msdn.microsoft.com/Forums/en-US/4a7f1180-4e31-4023-b073-8b777d48f764/global-variable-counter?forum=aspstatemanagement
-            //https://www.dotnetperls.com/static
-            //https://docs.microsoft.com/en-us/aspnet/core/fundamentals/app-state?view=aspnetcore-6.0//
-            //https://hoven.in/aspnet-core/using-session.html
-            //https://www.c-sharpcorner.com/UploadFile/225740/what-is-view-state-and-how-it-works-in-Asp-Net53/
-
-
-
-
-            //http://www.dotnetodyssey.com/2015/01/05/getset-value-session-variable-using-javascriptjquery/
-
-
-
-            //Operations to perform when skillRow is appended
-            var str1 = '<div class="form-group">';
-            var str2 = '@Html.LabelFor(s => s.SkillBatch[Convert.ToInt32(Session["counter"])].SkillCategory)';
-            var str3 = '@Html.TextBoxFor(s => s.SkillBatch[Convert.ToInt32(Session["counter"])].SkillCategory, new { @class = "form-control" })';
-            var str4 = '@Html.LabelFor(s => s.SkillBatch[Convert.ToInt32(Session["counter"])].SkillPoint)';
-            var str5 = '@Html.TextBoxFor(s => s.SkillBatch[Convert.ToInt32(Session["counter"])].SkillPoint, new { @class = "form-control" })';
-            var str6 = '</div>';
-
-
-
-
-
-            var strFormOpen =
-                `<div class="removeme" id="${rowID}">
-                <button type="button"  onclick="RemoveRow(this)" >REMOVE SKILL BELOW:</button>`;
-
-            var strFormClose = '<br /></div>';
-
-
-
-
-
-            //https://stackoverflow.com/questions/41564413/string-interpolation-for-dynamic-html-attributes
-            //var a = rowNum;
-            //var b = "form-control";
-            //var strX2 = "@@Html.TextBoxFor(s => s.SkillBatch" + rowNum + ".SkillPoint, new { @@class = "+b+" })";
-
-
-
-
-            //https://gomakethings.com/converting-a-string-into-markup-with-vanilla-js/
-            //var parser = new DOMParser();
-            //var strX3 = ;
-            //var skillRowZ = parser.parseFromString(strX2, 'text/html');
-
-
-
-
-
-            //Concatenate strings into full HTML form
-            //var strCompilation = strFormOpen + strTestParagraph + strFormClose;
-            var skillRow =
-                strFormOpen +
-                str1 + str2 + str3 + str4 + str5 + str6
-                + strFormClose;
-
-
-
-
-
-
-
-            var classID = ".appendme";
-            $(classID).append(skillRow);
-
-
-            rowNum++;
-            //window.alert(rowNum);
-
-            rowID = ".appendme" + rowNum;
-                //window.alert(rowID);
-
-
-
-
-
-                //BOTH APPROACHES DO THE SAME THING:
-                //SET THE FIELD VALUE BASED ON A JS VALUE
-                $("#SessionCounter").val(rowNum);
-                //document.getElementById("SessionCounter").value = rowNum;
-
-
-
-
-                //https://www.c-sharpcorner.com/UploadFile/0c1bb2/inserting-data-using-ajax/
-                //https://docs.microsoft.com/en-us/answers/questions/701086/ajax-post-request-with-razor-pages-and-full-calend.html
-                //https://www.c-sharpcorner.com/article/how-to-post-data-in-asp-net-core-using-ajax/
-            //https://www.compilemode.com/2021/04/post-data-to-controller-using-jquery-ajax-in-asp-net-mvc.html
-
-
-                //var sendValue = $("#SessionCounter").val();
-                //var sendValue = { 'SessionCounter': $("#SessionCounter").val() };
-                //var sendValue = { SessionCounter: parseInt( $("#SessionCounter").val() ) };
-
-            /*
-            $.ajax({
-                type: "POST",
-                url: "/SkillsController/SetSessionCounter",
-                data: sendValue
-
-            });*/
-
-
-
-
-                }); //end function()
-
-    </script>
-
-
-
-    //HIDDEN FIELD, BUTTON, AND SCRIPT TO TEST AJAX TO CONTROLLER
-
-    <input name="SessionCounter" id="SessionCounterTest" type="number" runat="server" value=@k />
-
-
-    //HELPERS:
-    //http://www.codedigest.com/posts/35/adding-javascript-in-aspnet-mvc-views
-    //https://www.youtube.com/watch?v=7ai2-TMQRek&t=306s&ab_channel=WebGentle
-    //https://www.c-sharpcorner.com/article/asp-net-mvc-how-to-use-ajax-with-parameters/
-    //https://stackoverflow.com/questions/48688756/ajax-post-int-to-mvc
-
-    <button type="button" id="btnAlert">[SEND MY COUNTER!]</button>
-
-    <script type="text/javascript">
-
-        //FUNCTION 1: Activity Trigger on Button Click using jQuery
-        $("#btnAlert").click(
-
-
-            function BtnClick() {
-
-            window.alert("TEST BtnClick()");
-
-                var count = $("#SessionCounterTest").val();
-
-                //Convert to Integer:
-                var countInt = parseInt(count);
-
-                //Object will be:
-                var obj = { SessionCounter : countInt };
-
-            TestMsg(countInt);
-            SendCounter();
-
-            }//BtnClick()
-
-
-        );//JQuery Event: Click Button with specified ID
-
-        function TestMsg(countInt) {
-
-            window.alert("Test for BtnClick() using TestMsg() " + countInt);
-
-        }//TestMsg()
-
-        function SendCounter(){
-
-
-            var count = $("#SessionCounterTest").val();
-
-            //Convert to Integer:
-            var countInt = parseInt(count);
-
-
-
-            window.alert("Sending Counter to Controller: ");
-
-
-
-
-            //AJAX START
-            $.ajax({
-
-                type: 'POST',
-                url: '@Url.Action("GetCounterValue")',
-                data: { SessionCounter : countInt },
-
-
-                success: function Success() {
-                    window.alert("Data successfully sent to Controller!");
-                },
-
-                error: function ErrorAlert() {
-                    window.alert("ERROR");
-                }
-
-
-            })//end ajax
-
-
-
-
-            //AJAX STOP
-
-
-        }//SendCounter()
-
-
-        //GetCounter
-        //https://stackoverflow.com/questions/24851926/refresh-session-variable-after-a-update-in-mvc4
-        //https://stackoverflow.com/questions/59932436/how-can-i-update-session-values-without-refreshing-my-page-in-asp-net-mvc
-
-
-    </script>
-
-
-    <div>
-                
-        <h3>SESSION</h3>
-        <h4>@Session["counter"]</h4>
-        <h4>@Globals.j</h4>
-        <br />
-
-    </div>
-
-
-
-
-
-
-
-
-
-    <script type="text/javascript">
-
-        //REMOVE A SINGLE SKILL ROW
-        function RemoveRow(elem) {
-
-
-            elem.parentElement.remove();
-            window.alert("Row ID to be deleted: " + rowID);
-
-
-            //DECREMENT ROW
-            rowNum--;
-            rowID = ".appendme" + rowNum;
-
-
-
-        }
-
-    </script>
-
-
-    <script type="text/javascript">
-
-        //REMOVE ALL EXTRA SKILL ROWS ADDED
-        $(".removebtn").click(function () {
-
-            classID = ".removeme";
-
-            window.alert("Final Row ID to be removed: " + rowID);
-
-            $(classID).remove();
-
-            //Reset counter for extra rows to zero,
-            //So when adding new rows, it will increment to 1 -> [1]
-            rowNum = 0;
-            window.alert("ALL Skill Rows removed. Row No. counter is now at " + rowNum);
-
-
-
-
-        });
-
-
-
-    </script>
-
-
-
-
-
-
-
-
-
-    <!-- THIS IS WHERE A NEWLY CREATED ROW WILL APPEAR-->
-    <div class="appendme"></div>
-
-
-
-
-    <p></p>
-
-
-
-
-
-
-
-    <br />
-
-
-
-
-
-    <div hidden>
-        <input name="counter" type="number" value="@Globals.j" />
-    </div>
-
-
-
-
-    <!-- FORM DATA SUBMISSION -->
-
-    <input type="submit" class="btn btn-primary" value="Add Batch of Skill Records">
-
-
-
-
-}<!-- End of Code Block-->
-<!--
-
-    https://docs.microsoft.com/en-us/aspnet/core/mvc/views/working-with-forms?view=aspnetcore-6.0
-
-
-
-
-
-
-
--->
+</body>
